# godec

./: CHANGELOG.md  README.md  pyproject.toml
data/: README.md
examples/: run_example.py
godec/: __init__.py  decompose.py
tests/: test_decompose.py
